manifests/deployment-api.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "publicapi"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "publicapi"
  template:
    metadata:
      labels:
        app: "publicapi"
    spec:
      containers:
        - name: "publicapi"
          image: "ghactionsaks.azurecr.io/publicapi"
          ports:
          - containerPort: 80
