manifests/deployment-db.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      hostname: mssqlinst
      securityContext:
        fsGroup: 10001
      containers:
      - image: mcr.microsoft.com/mssql/server:2019-CU14-ubuntu-18.04
        name: db
        volumeMounts:
        - name: mssqldb
          mountPath: /var/opt/mssql
        ports:
        - containerPort: 1433
      volumes:
      - name: mssqldb
        persistentVolumeClaim:
          claimName: mssql-data
