manifests/deployment-web.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "web"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "web"
  template:
    metadata:
      labels:
        app: "web"
    spec:
      containers:
        - name: "web"
          image: "ghactionsaks.azurecr.io/web"
          ports:
          - containerPort: 80
