manifests/service-api.yml
apiVersion: v1
kind: Service
metadata:
  name: "publicapi"
  labels:
    app: "publicapi"
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
      app: "publicapi"
