manifests/service-db.yml
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  ports:
  - name: db
    port: 1433
    targetPort: 1433
    protocol: TCP
  selector:
    app: "db"
