manifests/service-web.yml
apiVersion: v1
kind: Service
metadata:
  name: "web"
  labels:
    app: "web"
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: "web"
