manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "actionsaks-67e3"
    labels:
        app: "actionsaks-67e3"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: actions-aks-actionsaks-67e3.d19c4f4e637448fe8bbb.westus2.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "actionsaks-67e3"
                servicePort: 80
